# QT-whiteboard

./: .gitignore  README.md  colourselector.cpp  colourselector.hpp  constants.hpp  drawoperations.cpp  drawoperations.hpp  fileops.cpp  fileops.hpp  main.cpp  mainwindow.cpp  mainwindow.hpp  meson.build  todolist.txt  toolselector.cpp  toolselector.hpp  whiteboard.cpp  whiteboard.hpp
